2004-07-22  Heikki Junes  <hjunes@cc.hut.fi>

	* site/images/black.png: add file to be used with border lines in
	tables.

2004-07-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/switch/tour.html (href): add link to cs.uu.nl site.  

	* site/download/index.html: add 2.2.4 download links

2004-06-18  Heikki Junes  <hjunes@cc.hut.fi>

	* newweb.css (hr): use thin black horizontal line.

	* site/index.html (Quick links): use thin lines for table.

2004-06-16  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/download/index.html: debian and fink packages for 2.3.4
	and freeBSD for 2.2.2 and 2.3.4.

	* format-page.py (do_one_file): Added regular expression to strip
	the Date keyword from files.

2004-06-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/download/windows.html (href): remove "just click next"
	warning. We don't want people to skip the package selection
	dialog.

2004-06-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (upload): Remove -e ssh, add colon to WEBSERVER
	variable for unattended uploads.  Tip of the day: you may want to
	set RSYNC_RSH.

2004-05-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/download/index.html: announce 2.3.3

	* site/index.html (href): announce 2.2.2.

2004-05-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Cleanup indentation again.  Fix call-for-help
	link, fix description of 2.2.1.
	
2004-05-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/devel/participating/call-for-help.txt: add file.

2004-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Half-baken fix for javascript.

2004-04-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/participating/index.html (procedure): Add CVS
	checkout procedure for sources.  Remove deprecated login option.

2004-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (TAGS): New target.

	*.html: Update some stale DOC@ (esp. v1.8) links.

2004-04-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/images/netbsd.jpg: 