@@ -8,7 +8,7 @@
 </p>
 
 
-<table cellpadding="3%">
+<table cellpadding="3%" width="100%">
   <tr>
     
     <td width="50%">
@@ -44,16 +44,13 @@
 
 <br>
 
-<table rules="cols" cellpadding="6%">
-
+<table border=0 cellpadding="6%">
   <tr>
-    <th><h2>News</h2></th>
-    <th><h2>Quick links</h2></th>
-  </tr>
-
-  <tr>
-    <td width="55%">
-
+    <td width="62%">
+      <div align=center>	
+      <h2>News</h2>
+      </div>
+      <div>
       <dl>
 
       <dt>July 23, 2004</dt><dd>
@@ -101,15 +98,19 @@
       </dd> 
       </dl>
       <p align="right"><a href="old-news.html">older news...</a></p>
+      </div>
     </td>
-    
-    <td width="30%">
-      <table border=1 halign="left" frame="hsides" rules="all" cellpadding=2>
-	<colgroup align="left">
-	<colgroup align="left">
-	<colgroup align="left">
+    <td width="1px" height="100%">
+      <img src="images/black.png" width="1px" height="100%">
+    </td>
+    <td width="38%" valign="top">
+      <div align=center>	
+      <h2>Quick links</h2>
+      </div>	
+      <div class="links" padding=2 align="center">
+	<table border=0 halign="left" cellpadding=2>
 	  <tr>
-	    <th halign="left">Branch</th>
+	    <th>Branch</th>
 	    <th>version</th>
 	    <th>jump to</th>
 	  </tr>
@@ -150,6 +151,7 @@
 	  </tr>
 
       </table>
+      </div>
     </td>
   </tr>
 </table>
@@ -168,7 +170,7 @@
       // !-->
 </script>
 
-<p align="center">
+<div align="center">
   <nobr>
     <form action="http://www.google.com/search"
 	  method="get"
@@ -186,5 +188,5 @@
       <input type="submit" value="Search lilypond.org">
     </form>
   </nobr>
-</p>
+</div>
 
