@@ -1,3 +1,8 @@
+2004-07-25  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* site/index.html: make home page look more similar in different
+	  browsers.
+
 2004-07-22  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* site/images/black.png: add file to be used with border lines in
